# OpenPAF

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
src/: error.rs  lib_when_lib.rs  main.rs  module.rs  server.rs  time.rs
src/config/: config.rs  mod.rs  moduleconf.rs  sysconf.rs
src/time/: datetime.rs  mod.rs  timefreq.rs  timeparser.rs
test/: config.json  create_db.sh  moduleconfig.json  openpaf_sqlite.db  sysconfig_full.json
