[package]
name = "openpaf"
version = "0.1.0"
authors = ["GaborFarkas <raandal73@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
chrono-tz = "0.5.1"
serde_json = "1.0.40"
machine-ip = "0.2.1"
